--- a/0.html
+++ b/0.html
@@ -37,7 +37,7 @@ Serdecznie zapraszamy do zakupów online, opłata za pośrednictwem <b>eSkarbonk
           <p><b>RU</b> Наша рождественская ярмарка переехала в интернет. У нас осталось немного чудесных и неповторимых украшений и подарков ручной работы. Дорогие Дедушки Морозы, совместите приятное с полезным!<br/>
 Сердечно приглашаем за онлайн-покупками, оплата через <b>eSkarbonka</b> нашего штаба.<br/>
  Общий доход от&nbsp;продажи будет направлен на&nbsp;благотворительные цели <nobr>29-го финала</nobr> Большого оркестра праздничной помощи, то&nbsp;есть на&nbsp;покупку оборудования для отоларингологии, <nobr>ЛОР-инструментов</nobr> и&nbsp;диагностики заболеваний головного мозга.
-          <p><b><span class="red">!&nbsp;</span>Перед тем, как оплатить выбранный товар, пожалуйста, свяжитесь с нами <a href="mailto:wosp.moskwa@gmail.com">wosp.moskwa@gmail.com</a>, <nobr>+7 915 2007192 (Богна),</nobr> <nobr>+7 925 3205824 (Аня),</nobr> чтобы мы могли удостовериться, что сможем доставить вам покупку.</b><br/>Этот проект поддерживается волонтерами, мы не являемся полноценным интернет-магазином с курьерами, но приложим все усилия, чтобы продать товары.  <br/>           
+          <p><b><span class="red">!&nbsp;</span>Перед тем, как оплатить выбранный товар, пожалуйста, свяжитесь с нами <a href="mailto:wosp.moskwa@gmail.com">wosp.moskwa@gmail.com</a>, <nobr>+7 915 2007192 (Богна),</nobr> <nobr>+7 925 3205824 (Аня),</nobr> чтобы мы могли убедиться, что сможем доставить вам покупку.</b><br/>Этот проект поддерживается волонтерами, мы не являемся полноценным интернет-магазином с курьерами, но приложим все усилия, чтобы продать товары.  <br/>           
         Оплата покупок через <b>eSkarbonka</b> нашего штаба.  </p> 
               
     <div class="br"></div>
