--- a/0.html
+++ b/0.html
@@ -87,24 +87,24 @@ Serdecznie zapraszamy do zakupów online, opłata za pośrednictwem <b>eSkarbonk
         <div class="br"></div>             
    </div>
         <!--/handmade-->
-      <h2>Kosmetyki Pani Walewska / Духи и кремы Пани Валевска</h2>
+      <h2>Kosmetyki / Духи и кремы</h2>
       <div class="goods" id="kosm">
        <div class="book-03"><img src="img/walewska_09.jpg"><b>Pani Walewska Classic</b>  <i>Perfume spray<br/>800 Rub / 40 PLN</i></div>    
         <div class="book-03"><img src="img/walewska_10.jpg"><b>Pani Walewska Classic</b>  <i>Deodorant<br/>300 Rub / 15 PLN</i></div>      
-        <div class="book-03"><img src="img/walewska_14.jpg"><b>Pani Walewska Być Może<br/>Tokio</b>  <i>Perfume<br/>200 Rub / 40 PLN</i></div>  
-       <div class="book-03"><img src="img/walewska_11.jpg"><b>Pani Walewska Być Może<br/>Rome</b>  <i>Perfume<br/>200 Rub / 40 PLN</i></div> 
-       <div class="book-03"><img src="img/walewska_12.jpg"><b>Pani Walewska Być Może<br/>New York</b>  <i>Perfume<br/>200 Rub / 40 PLN</i></div> 
-          <div class="book-03"><img src="img/walewska_13.jpg"><b>Pani Walewska Być Może<br/>Summer In Paris</b>  <i>Perfume<br/>200 Rub / 40 PLN</i></div>            
+        <div class="book-03"><img src="img/walewska_14.jpg"><b>Być Może<br/>Tokio</b>  <i>Perfume<br/>200 Rub / 40 PLN</i></div>  
+       <div class="book-03"><img src="img/walewska_11.jpg"><b>Być Może<br/>Rome</b>  <i>Perfume<br/>200 Rub / 40 PLN</i></div> 
+       <div class="book-03"><img src="img/walewska_12.jpg"><b>Być Może<br/>New York</b>  <i>Perfume<br/>200 Rub / 40 PLN</i></div> 
+          <div class="book-03"><img src="img/walewska_13.jpg"><b>Być Może<br/>Summer In Paris</b>  <i>Perfume<br/>200 Rub / 40 PLN</i></div>            
         <div class="br"></div>   
-       <div class="book-03"><img src="img/walewska_03.jpg"><b>Gracjia BIO Nawiłżający / увлажняющий</b>  <i>Krem do twarzy / Крем для лица<br/>500 Rub / 25 PLN</i></div> 
-     <div class="book-03"><img src="img/walewska_04.jpg"><b>Gracjia BIO Odmładżający / омолаживающий</b>  <i>Krem do twarzy / Крем для лица<br/>500 Rub / 25 PLN</i></div>
+       <div class="book-03"><img src="img/walewska_03.jpg"><b>Gracja BIO Nawilżający / увлажняющий</b>  <i>Krem do twarzy / Крем для лица<br/>500 Rub / 25 PLN</i></div> 
+     <div class="book-03"><img src="img/walewska_04.jpg"><b>Gracja BIO Odmładzający / омолаживающий</b>  <i>Krem do twarzy / Крем для лица<br/>500 Rub / 25 PLN</i></div>
     <div class="book-03"><img src="img/walewska_05.jpg"><b>Gracjia BIO Odżywczy / питательный</b>  <i>Krem do twarzy / Крем для лица<br/>500 Rub / 25 PLN</i></div>
       <div class="br"></div> 
-          <div class="book-03"><img src="img/walewska_01.jpg"><b>Gracjia Oliwka Odżywczy<br/>Оливка, питательный</b> <i>Krem do twarzy / Крем для лица<br/>300 Rub / 15 PLN</i></div> 
-      <div class="book-03"><img src="img/walewska_02.jpg"><b>Gracjia Kolagen Odżywczy<br/>Колаген, питательный</b>  <i>Krem do twarzy / Крем для лица<br/>300 Rub / 15 PLN</i></div> 
-      <div class="book-03"><img src="img/walewska_06.jpg"><b>Gracjia Wiesiołek Półtłusty<br/>Примула, полужирный</b>  <i>Krem do twarzy / Крем для лица<br/>300 Rub / 15 PLN</i></div> 
-       <div class="book-03"><img src="img/walewska_07.jpg"><b>Gracjia Orchidea Rewitalizujący<br/>Охидея, обновляющий</b>  <i>Krem do twarzy / Крем для лица<br/>300 Rub / 15 PLN</i></div>    
-         <div class="book-03"><img src="img/walewska_08.jpg"><b>Gracjia Aloe Nawiłżający<br/>Алое, увлажняющий</b>  <i>Krem do twarzy / Крем для лица<br/>300 Rub / 15 PLN</i></div>    
+          <div class="book-03"><img src="img/walewska_01.jpg"><b>Gracja Oliwka Odżywczy<br/>Оливка, питательный</b> <i>Krem do twarzy / Крем для лица<br/>300 Rub / 15 PLN</i></div> 
+      <div class="book-03"><img src="img/walewska_02.jpg"><b>Gracja Kolagen Odżywczy<br/>Колаген, питательный</b>  <i>Krem do twarzy / Крем для лица<br/>300 Rub / 15 PLN</i></div> 
+      <div class="book-03"><img src="img/walewska_06.jpg"><b>Gracja Wiesiołek Półtłusty<br/>Примула, полужирный</b>  <i>Krem do twarzy / Крем для лица<br/>300 Rub / 15 PLN</i></div> 
+       <div class="book-03"><img src="img/walewska_07.jpg"><b>Gracja Orchidea Rewitalizujący<br/>Охидея, обновляющий</b>  <i>Krem do twarzy / Крем для лица<br/>300 Rub / 15 PLN</i></div>    
+         <div class="book-03"><img src="img/walewska_08.jpg"><b>Gracja Aloe Nawiłżający<br/>Алое, увлажняющий</b>  <i>Krem do twarzy / Крем для лица<br/>300 Rub / 15 PLN</i></div>    
       <div class="br"></div>
           </div>  
       <h2>Cukierki / Конфеты</h2>
