--- a/0.html
+++ b/0.html
@@ -104,7 +104,7 @@ Serdecznie zapraszamy do zakupów online, opłata za pośrednictwem <b>eSkarbonk
       <div class="book-03"><img src="img/walewska_02.jpg"><b>Gracja Kolagen Odżywczy<br/>Колаген, питательный</b>  <i>Krem do twarzy / Крем для лица<br/>300 Rub / 15 PLN</i></div> 
       <div class="book-03"><img src="img/walewska_06.jpg"><b>Gracja Wiesiołek Półtłusty<br/>Примула, полужирный</b>  <i>Krem do twarzy / Крем для лица<br/>300 Rub / 15 PLN</i></div> 
        <div class="book-03"><img src="img/walewska_07.jpg"><b>Gracja Orchidea Rewitalizujący<br/>Охидея, обновляющий</b>  <i>Krem do twarzy / Крем для лица<br/>300 Rub / 15 PLN</i></div>    
-         <div class="book-03"><img src="img/walewska_08.jpg"><b>Gracja Aloe Nawiłżający<br/>Алое, увлажняющий</b>  <i>Krem do twarzy / Крем для лица<br/>300 Rub / 15 PLN</i></div>    
+         <div class="book-03"><img src="img/walewska_08.jpg"><b>Gracja Aloe Nawilżający<br/>Алое, увлажняющий</b>  <i>Krem do twarzy / Крем для лица<br/>300 Rub / 15 PLN</i></div>    
       <div class="br"></div>
           </div>  
       <h2>Cukierki / Конфеты</h2>
