--- a/0.html
+++ b/0.html
@@ -109,8 +109,8 @@ Serdecznie zapraszamy do zakupów online, opłata za pośrednictwem <b>eSkarbonk
           </div>  
       <h2>Cukierki / Конфеты</h2>
       <div class="goods" id="cuker">
-          <div class="book-03"><img src="img/cuker_01.jpg"><b>Karamelki POLSKI SPICHLERZ<br/>Карамель POLSKI SPICHLERZ</b><i>250 Rub / 12 PLN</i></div>
-          <div class="book-03"><img src="img/cuker_02.jpg"><b>Karamelki POLSKI SPICHLERZ Malinki<br/>Карамель POLSKI SPICHLERZ Малинки</b><i>250 Rub / 12 PLN</i></div> 
+          <div class="book-03"><img src="img/cuker_01.jpg"><b>Karmelki POLSKI SPICHLERZ<br/>Карамель POLSKI SPICHLERZ</b><i>250 Rub / 12 PLN</i></div>
+          <div class="book-03"><img src="img/cuker_02.jpg"><b>Karmelki POLSKI SPICHLERZ Malinki<br/>Карамель POLSKI SPICHLERZ Малинки</b><i>250 Rub / 12 PLN</i></div> 
       <div class="br"></div>
           </div>  
        <!-- contacts-->
