--- a/0.html
+++ b/0.html
@@ -98,7 +98,7 @@ Serdecznie zapraszamy do zakupów online, opłata za pośrednictwem <b>eSkarbonk
         <div class="br"></div>   
        <div class="book-03"><img src="img/walewska_03.jpg"><b>Gracja BIO Nawilżający / увлажняющий</b>  <i>Krem do twarzy / Крем для лица<br/>500 Rub / 25 PLN</i></div> 
      <div class="book-03"><img src="img/walewska_04.jpg"><b>Gracja BIO Odmładzający / омолаживающий</b>  <i>Krem do twarzy / Крем для лица<br/>500 Rub / 25 PLN</i></div>
-    <div class="book-03"><img src="img/walewska_05.jpg"><b>Gracjia BIO Odżywczy / питательный</b>  <i>Krem do twarzy / Крем для лица<br/>500 Rub / 25 PLN</i></div>
+    <div class="book-03"><img src="img/walewska_05.jpg"><b>Gracja BIO Odżywczy / питательный</b>  <i>Krem do twarzy / Крем для лица<br/>500 Rub / 25 PLN</i></div>
       <div class="br"></div> 
           <div class="book-03"><img src="img/walewska_01.jpg"><b>Gracja Oliwka Odżywczy<br/>Оливка, питательный</b> <i>Krem do twarzy / Крем для лица<br/>300 Rub / 15 PLN</i></div> 
       <div class="book-03"><img src="img/walewska_02.jpg"><b>Gracja Kolagen Odżywczy<br/>Колаген, питательный</b>  <i>Krem do twarzy / Крем для лица<br/>300 Rub / 15 PLN</i></div> 
