--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ Serdecznie zapraszamy do zakupów online, opłata za pośrednictwem <b>eSkarbonk
              <div class="book-01"><img src="img/choinka_012.jpg"><b>Ozdoba #12<br/>Украшение #12</b><i>500 Rub / 25 PLN</i></div>
              <div class="book-01 book-02"><img src="img/ozdobe_2053_l.jpg"><b>Ozdobe #2053<br/>Украшение #2053</b> <i>300 Rub (1 szt.) / 25 PLN</i><br/><i>1000 Rub (4 szt.) / 50 PLN</i></div> 
              <div class="book-01 book-02"><img src="img/balwan_2055_l.jpg"><b>Balwane #2055<br/>Снеговички #2055</b> <i>500 Rub / 25 PLN (1 szt.)</i><br/><i>800 Rub / 40 PLN (2 szt.)</i></div>
-             <div class="book-01 book-02"><img src="img/choinka_new_01.jpg"><b>Choinka #1 H=~50 cm <br/>Елочка #1</b><i>2500 Rub / 122 PLN</i></div> 
+             <!--div class="book-01 book-02"><img src="img/choinka_new_01.jpg"><b>Choinka #1 H=~50 cm <br/>Елочка #1</b><i>2500 Rub / 122 PLN</i></div--> 
             <div class="book-01 book-02"><img src="img/ania_01_l.jpg"><b>Stroik #5 D=~50cm<br/>Рождественский венок #5</b> <i>3000 Rub / 147 PLN</i></div>
               <div class="book-01 book-02"><img src="img/stroik_2066_l.jpg"><b>Stroik #2066 D=~50cm<br/>Рождественский венок #2066</b><i>2000 Rub / 98 PLN</i></div>
               <div class="book-01 book-02"><img src="img/ania_05_l.jpg"><b>Stroik #7 D=~50cm<br/>Рождественский венок #7</b><i>3500 Rub / 170 PLN</i></div>
@@ -89,19 +89,19 @@ Serdecznie zapraszamy do zakupów online, opłata za pośrednictwem <b>eSkarbonk
         <!--/handmade-->
       <h2>Kosmetyki / Духи и кремы</h2>
       <div class="goods" id="kosm">
-       <div class="book-03"><img src="img/walewska_09.jpg"><b>Pani Walewska Classic</b>  <i>Perfume spray<br/>800 Rub / 40 PLN</i></div>    
-        <div class="book-03"><img src="img/walewska_10.jpg"><b>Pani Walewska Classic</b>  <i>Deodorant<br/>300 Rub / 15 PLN</i></div>      
+       <!--div class="book-03"><img src="img/walewska_09.jpg"><b>Pani Walewska Classic</b>  <i>Perfume spray<br/>800 Rub / 40 PLN</i></div-->    
+        <!--div class="book-03"><img src="img/walewska_10.jpg"><b>Pani Walewska Classic</b>  <i>Deodorant<br/>300 Rub / 15 PLN</i></div-->      
         <div class="book-03"><img src="img/walewska_14.jpg"><b>Być Może<br/>Tokio</b>  <i>Perfume<br/>200 Rub / 40 PLN</i></div>  
        <div class="book-03"><img src="img/walewska_11.jpg"><b>Być Może<br/>Rome</b>  <i>Perfume<br/>200 Rub / 40 PLN</i></div> 
        <div class="book-03"><img src="img/walewska_12.jpg"><b>Być Może<br/>New York</b>  <i>Perfume<br/>200 Rub / 40 PLN</i></div> 
           <div class="book-03"><img src="img/walewska_13.jpg"><b>Być Może<br/>Summer In Paris</b>  <i>Perfume<br/>200 Rub / 40 PLN</i></div>            
         <div class="br"></div>   
-       <div class="book-03"><img src="img/walewska_03.jpg"><b>Gracja BIO Nawilżający / увлажняющий</b>  <i>Krem do twarzy / Крем для лица<br/>500 Rub / 25 PLN</i></div> 
+       <!--div class="book-03"><img src="img/walewska_03.jpg"><b>Gracja BIO Nawilżający / увлажняющий</b>  <i>Krem do twarzy / Крем для лица<br/>500 Rub / 25 PLN</i></div> 
      <div class="book-03"><img src="img/walewska_04.jpg"><b>Gracja BIO Odmładzający / омолаживающий</b>  <i>Krem do twarzy / Крем для лица<br/>500 Rub / 25 PLN</i></div>
-    <div class="book-03"><img src="img/walewska_05.jpg"><b>Gracja BIO Odżywczy / питательный</b>  <i>Krem do twarzy / Крем для лица<br/>500 Rub / 25 PLN</i></div>
+    <div class="book-03"><img src="img/walewska_05.jpg"><b>Gracja BIO Odżywczy / питательный</b>  <i>Krem do twarzy / Крем для лица<br/>500 Rub / 25 PLN</i></div-->
       <div class="br"></div> 
           <div class="book-03"><img src="img/walewska_01.jpg"><b>Gracja Oliwka Odżywczy<br/>Оливка, питательный</b> <i>Krem do twarzy / Крем для лица<br/>300 Rub / 15 PLN</i></div> 
-      <div class="book-03"><img src="img/walewska_02.jpg"><b>Gracja Kolagen Odżywczy<br/>Колаген, питательный</b>  <i>Krem do twarzy / Крем для лица<br/>300 Rub / 15 PLN</i></div> 
+      <!--div class="book-03"><img src="img/walewska_02.jpg"><b>Gracja Kolagen Odżywczy<br/>Колаген, питательный</b>  <i>Krem do twarzy / Крем для лица<br/>300 Rub / 15 PLN</i></div--> 
       <div class="book-03"><img src="img/walewska_06.jpg"><b>Gracja Wiesiołek Półtłusty<br/>Примула, полужирный</b>  <i>Krem do twarzy / Крем для лица<br/>300 Rub / 15 PLN</i></div> 
        <div class="book-03"><img src="img/walewska_07.jpg"><b>Gracja Orchidea Rewitalizujący<br/>Орхидея, обновляющий</b>  <i>Krem do twarzy / Крем для лица<br/>300 Rub / 15 PLN</i></div>    
          <div class="book-03"><img src="img/walewska_08.jpg"><b>Gracja Aloe Nawilżający<br/>Алое, увлажняющий</b>  <i>Krem do twarzy / Крем для лица<br/>300 Rub / 15 PLN</i></div>    
