--- a/0.html
+++ b/0.html
@@ -10,8 +10,8 @@
     </head>
     <body>
         <div class="banner" title="SZTAB Moskwa zaprasza na targi online na rzecz WOŚP">
-            <div>na targi online <nobr>na rzecz <b><span style="color: #FFED00;">W</span><span style="color: #EE7003;">O</span><span style="color: #E30613;">Ś</span><span style="color: #E6007E;">P</span></b></nobr></div>
-        </div>
+            <!--div>na targi online <nobr>na rzecz <b><span style="color: #FFED00;">W</span><span style="color: #EE7003;">O</span><span style="color: #E30613;">Ś</span><span style="color: #E6007E;">P</span></b></nobr></div>
+        </div-->
         <div class="main">
      <!-- top menu-->
         <div class="topmenu-wrap">
