--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ Serdecznie zapraszamy do zakupów online, opłata za pośrednictwem <b>eSkarbonk
         <!--div class="book-01"><img src="img/jr_02.jpg"><b>Jednorożec #2</b> <i>Broszka, ~3-4 cm</i></div-->
         <div class="book-01"><img src="img/jednorozec_2061.jpg"><b>Jednorożec #3<br/>Единорог #3</b> <i>Broszka / Брошка, ~3 cm <br/>500 Rub / 25 PLN</i></div>     
        <div class="book-01"><img src="img/podkladki_01.jpg"><b>Podkładki, zestaw 4 szt. / подставки под горячее, 4 шт.</b> <i>500 Rub / 35 PLN</i></div>
-         <div class="book-01 book-02"><img src="img/korale_l.jpg"><b>Korale z tkaniny, ~25-30 cm<br/>Бусы из ткани</b> <i>500 Rub / 25 PLN</i></div>   
+         <!--div class="book-01 book-02"><img src="img/korale_l.jpg"><b>Korale z tkaniny, ~25-30 cm<br/>Бусы из ткани</b> <i>500 Rub / 25 PLN</i></div-->   
         <div class="br"></div>             
    </div>
         <!--/handmade-->
