--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <title>WOŚP Moskwa 2022 | SZTAB Moskwa zaprasza na targi na rzecz WOŚP</title>
         <meta name="description" content="Moskiewski sztab Wielkiej Orkiestry Świątecznej Pomocy zaprasza na charytatywny jarmark bożonarodzeniowy. Całkowity dochód ze sprzedaży przeznaczony będzie na cele 30. Finału WOŚP, czyli zakup sprzętu dla zapewnienia najwyższych standardów diagnostyki i leczenia wzroku u dzieci" />
         <link rel="stylesheet" href="css.css" type="text/css" />
+        <meta property=”og:image” content=”wospmoskwa.github.io/img/logo_30_site.jpg” />
     </head>
     <body>
         <div class="banner" title="SZTAB Moskwa zaprasza na targi online na rzecz WOŚP"></div>
