--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <meta property="og:site_name" content="WOŚP Moskwa Nonprofit Organization" />
         <meta property="og:type" content="website" />
         <meta property="og:url" content="https://wospmoskwa.github.io/" />
-        <meta property=”og:image” content=”https://wospmoskwa.github.io/img/logo_30_site.jpg” />
+        <meta property=”og:image” content=”https://wospmoskwa.github.io/logo_30_site.jpg” />
         <meta property="og:image:type" content="image/jpg">
         
         
