--- a/index.html
+++ b/index.html
@@ -15,7 +15,28 @@
        	<meta property="og:image" content="https://wospmoskwa.github.io/logo_30_site.jpg" />    
         <meta property="og:image:width" content="1200" />
 		<meta property="og:image:height" content="627" />
-        <meta property="og:image:type" content="image/jpg">        
+        <meta property="og:image:type" content="image/jpg"> 
+	    
+	     <style>
+        @media only screen and (min-width : 320px) and (max-width : 480px) {
+            .main-container {margin:auto; padding-top:5px; text-align:center; min-width:320px; max-width:480px;}
+            .banner {background-image: url(/img/1122_320.png); height:185px; }
+            .goods {min-width:320px; max-width:480px;}
+            img {border:3px #f00 dotted; max-width:250px !important;}
+            .fr, .fl {float:none !important; clear:both; margin:10px 0px !important; width:100%; text-align:center;}  
+            .contacts a.face {float: none; clear:both;}
+            .contacts a.wosp {float: none; margin-left: 0px  !important;; clear:both;}           
+}            
+         @media only screen and (max-width: 320px) {
+              .main-container {margin:auto; padding-top:5px; text-align:center; max-width:320px;}
+              .banner {background-image: url(/img/1122_320.png); height:155px; }
+              .goods {max-width:32px;}
+               img {border:3px #f00 dotted; max-width:200px !important;}
+               .fr, .fl  {float:none !important; clear:both; margin:10px 0px !important; width:100%; text-align:center;}   
+               .contacts a.face {float: none; clear:both;}
+                .contacts a.wosp {float: none; margin-left: 0px !important;; clear:both;}                         }
+        </style>
+	    
     </head>
     <body>
         <div class="banner" title="SZTAB Moskwa zaprasza na targi online na rzecz WOŚP"></div>
