--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	    
 	    <style>
         @media only screen and (min-width : 320px) and (max-width : 480px) {
-            .main-container {margin:auto; padding-top:5px; text-align:center; min-width:320px; max-width:480px;}
+            .main-container {margin:auto; padding:5px; text-align:center; min-width:320px; max-width:480px;}
             .banner {background-image: url(img/1122_480.png); height:185px; }
             .goods {min-width:320px; max-width:480px;}
             .fr, .fl {float:none !important; clear:both; margin:10px 0px !important; width:100%; text-align:center;}  
@@ -28,7 +28,7 @@
 }
             
          @media only screen and (max-width: 320px) {
-         .main-container {margin:auto; padding-top:5px; text-align:center; max-width:320px;}
+         .main-container {margin:auto; padding:5px; text-align:center; max-width:320px;}
          .banner {background-image: url(img/1122_320.png); height:155px; }
          .goods {max-width:320px;}        
          .fr, .fl  {float:none !important; clear:both; margin:10px 0px !important; width:100%; text-align:center;}   
