--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
             .goods {min-width:320px; max-width:480px;}
 	 .book-01 { font-size:12px; width:150px; height:200px; margin:10px 10px 10px 0px; text-align:center; border:1px solid #ccc; float:left; display:inline-block; background:#fff; }
 	.book-01 img {margin:10px auto; height:150px;}
+		 .book-02 img:hover{
+ 		-webkit-transform: scale(1.4);
+ 		-moz-transform: scale(1.4);
+		 -o-transform: scale(1.4);
+ }
             .fr, .fl {float:none !important; clear:both; margin:10px 0px !important; width:100%; text-align:center;}  
             .contacts a.face {float: none; clear:both;}
            .contacts a.mail, .contacts a.face {float: none; margin-left: 0px  !important;; clear:both;}
@@ -36,6 +41,10 @@
          .goods {max-width:320px;}    
 	  .book-01 { font-size:12px; width:150px; height:200px; margin:10px 10px 10px 0px; text-align:center; border:1px solid #ccc; float:left; display:inline-block; background:#fff; }
 	.book-01 img {margin:10px auto; height:150px;}
+		  .book-02 img:hover{
+ 		-webkit-transform: scale(1.4);
+ 		-moz-transform: scale(1.4);
+		 -o-transform: scale(1.4);
          .fr, .fl  {float:none !important; clear:both; margin:10px 0px !important; width:100%; text-align:center;}   
          .contacts a.face {float: none; clear:both;}
         .contacts a.mail, .contacts a.face  {float: none; margin-left: 0px !important;; clear:both;}
