--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
  }
             .fr, .fl {float:none !important; clear:both; margin:10px 0px !important; width:100%; text-align:center;}  
             .contacts a.face {float: none; clear:both;}
-           .contacts a.mail, .contacts a.face {float: none; margin-left: 0px  !important;; clear:both;}
+           .contacts a.wosp, .contacts a.face {float: none; margin-left: 0px  !important;; clear:both;}
 	  
 }
             
@@ -47,7 +47,7 @@
 		 -o-transform: scale(1.4);
          .fr, .fl  {float:none !important; clear:both; margin:10px 0px !important; width:100%; text-align:center;}   
          .contacts a.face {float: none; clear:both;}
-        .contacts a.mail, .contacts a.face  {float: none; margin-left: 0px !important;; clear:both;}
+        .contacts a.wosp, .contacts a.face  {float: none; margin-left: 0px !important;; clear:both;}
             }
         </style>
 	    
