--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             .main-container {margin:auto; padding:5px; text-align:center; min-width:320px; max-width:480px;}
             .banner {background-image: url(img/1122_480.png); height:185px; }
             .goods {min-width:320px; max-width:480px;}
-	 .book-01 { font-size:12px; width:150px; height:200px; margin:10px 10px 10px 0px; text-align:center; border:1px solid #ccc; float:left; display:inline-block; background:#fff; }
-	.book-01 img {margin:10px auto; height:150px;}
+	 .book-01 { font-size:12px; width:150px; height:250px; margin:5px 5px 5px 0px; text-align:center; border:1px solid #ccc; float:left; display:inline-block; background:#fff; }
+	.book-01 img {margin:5px auto; height:150px;}
 		 .book-02 img:hover{
  		-webkit-transform: scale(1.4);
  		-moz-transform: scale(1.4);
@@ -31,23 +31,22 @@
  }
             .fr, .fl {float:none !important; clear:both; margin:10px 0px !important; width:100%; text-align:center;}  
             .contacts a.face {float: none; clear:both;}
-           .contacts a.wosp, .contacts a.face {float: none; margin-left: 0px  !important;; clear:both;}
-	  
+           .contacts a.wosp, .contacts a.face {float: none; margin-left: 0px  !important; clear:both;}	  
 }
             
          @media only screen and (max-width: 320px) {
          .main-container {margin:auto; padding:5px; text-align:center; max-width:320px;}
          .banner {background-image: url(img/1122_320.png); height:155px; }
          .goods {max-width:320px;}    
-	  .book-01 { font-size:12px; width:150px; height:200px; margin:10px 10px 10px 0px; text-align:center; border:1px solid #ccc; float:left; display:inline-block; background:#fff; }
-	.book-01 img {margin:10px auto; height:150px;}
+	  .book-01 { font-size:12px; width:150px; height:250px; margin:5px 5px 5px 0px; text-align:center; border:1px solid #ccc; float:left; display:inline-block; background:#fff; }
+	.book-01 img {margin:5px auto; height:150px;}
 		  .book-02 img:hover{
  		-webkit-transform: scale(1.4);
  		-moz-transform: scale(1.4);
 		 -o-transform: scale(1.4);
          .fr, .fl  {float:none !important; clear:both; margin:10px 0px !important; width:100%; text-align:center;}   
          .contacts a.face {float: none; clear:both;}
-        .contacts a.wosp, .contacts a.face  {float: none; margin-left: 0px !important;; clear:both;}
+        .contacts a.wosp, .contacts a.face  {float: none; margin-left: 0px !important; clear:both;}
             }
         </style>
 	    
