--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 	    
 	    <style>
         @media only screen and (min-width : 320px) and (max-width : 480px) {
+		.topmenu {font-size:14px; font-family:Arial Narrow, sans-serif; text-align:left; text-transform:uppercase; color:#444; margin:auto; text-align:left; padding-top:12px; max-width:480px;  padding-bottom: 10px;}
             .main-container {margin:auto; padding:5px; text-align:center; min-width:320px; max-width:480px;}
             .banner {background-image: url(img/1122_480.png); height:185px; }
             .goods {min-width:320px; max-width:480px;}
@@ -35,6 +36,7 @@
 }
             
          @media only screen and (max-width: 320px) {
+		 .topmenu {font-size:14px; font-family:Arial Narrow, sans-serif; text-align:left; text-transform:uppercase; color:#444; margin:auto; text-align:left; padding-top:12px; max-width:480px;  padding-bottom: 10px;}
          .main-container {margin:auto; padding:5px; text-align:center; max-width:320px;}
          .banner {background-image: url(img/1122_320.png); height:155px; }
          .goods {max-width:320px;}    
