--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="shortcut icon" href="https://wospmoskwa.github.io/favicon.ico">
         <title>WOŚP Moskwa 2022 | SZTAB Moskwa zaprasza na targi na rzecz WOŚP</title>
         <meta name="description" content="Moskiewski sztab Wielkiej Orkiestry Świątecznej Pomocy zaprasza na charytatywny jarmark bożonarodzeniowy. Całkowity dochód ze sprzedaży przeznaczony będzie na cele 30. Finału WOŚP, czyli zakup sprzętu dla zapewnienia najwyższych standardów diagnostyki i leczenia wzroku u dzieci" />
@@ -31,7 +32,7 @@
 		 -o-transform: scale(1.4);
  }
             .fr, .fl {float:none !important; clear:both; margin:10px 0px !important; width:100%; text-align:center;}  
-            .contacts a.face {float: none; clear:both;}
+            .contacts a.face {float: none; margin-top:5px; clear:both;}
            .contacts a.wosp, .contacts a.face {float: none; margin-left: 0px  !important; clear:both;}	  
 }
             
@@ -47,7 +48,7 @@
  		-moz-transform: scale(1.4);
 		 -o-transform: scale(1.4);
          .fr, .fl  {float:none !important; clear:both; margin:10px 0px !important; width:100%; text-align:center;}   
-         .contacts a.face {float: none; clear:both;}
+         .contacts a.face {float: none; margin-top:5px; clear:both;}
         .contacts a.wosp, .contacts a.face  {float: none; margin-left: 0px !important; clear:both;}
             }
         </style>
