--- a/index.html
+++ b/index.html
@@ -77,37 +77,37 @@ Serdecznie zapraszamy do zakupów online, opłata za pośrednictwem <b>eSkarbonk
       <!-- Ozdoby choinkowe-->
         <h2>Ozdoby choinkowe / Елочные игрушки</h2>
          <div class="goods" id="ozdoby_choinkowe">  
-             <div class="book-01 book-02"><img src="img/aniols.jpg"><b>Aniołki / Ангелочки</b><i>1000 Rub / 50 PLN<br/>(4 szt./4 шт.)</i></div>  
-             <div class="book-01"><img src="img/matrioszki_02.jpg" title="Matrioszki"><b>Matrioszki<br/>Матрешки, ~12 cm</b><i>500 Rub / 25 PLN<br/>(1 szt./ 1 шт.)</i></div>  
-             <div class="book-01"><img src="img/choinka_02.jpg"><b>Ozdoba #2<br/>Украшение #2</b><i>500 Rub / 25 PLN</i></div>
-              <div class="book-01"><img src="img/choinka_05.jpg"><b>Ozdoba #5<br/>Украшение #5</b><i>500 Rub / 25 PLN</i></div>            
-              <div class="book-01"><img src="img/choinka_04.jpg"><b>Ozdoba #4<br/>Украшение #4</b><i>500 Rub / 25 PLN</i></div>  
-            <div class="book-01"><img src="img/choinka_014.jpg"><b>Ozdoba #14<br/>Украшение #14</b><i>500 Rub / 25 PLN</i></div>         
-            <div class="book-01"><img src="img/choinka_08.jpg"><b>Ozdoba #8<br/>Украшение #8</b><i>500 Rub / 25 PLN</i></div>
-             <div class="book-01"><img src="img/choinka_012.jpg"><b>Ozdoba #12<br/>Украшение #12</b><i>500 Rub / 25 PLN</i></div>
-             <div class="book-01 book-02"><img src="img/ozdobe_2053_l.jpg"><b>Ozdobe #2053<br/>Украшение #2053</b> <i>300 Rub (1 szt.) / 25 PLN</i><br/><i>1000 Rub (4 szt.) / 50 PLN</i></div> 
-             <div class="book-01 book-02"><img src="img/balwan_2055_l.jpg"><b>Balwane #2055<br/>Снеговички #2055</b> <i>500 Rub / 25 PLN (1 szt.)</i><br/><i>800 Rub / 40 PLN (2 szt.)</i></div>
+             <div class="book-01 book-02"><img src="img/aniols.jpg"><b>Aniołki / Ангелочки</b><i>50 PLN<br/>(4 szt./4 шт.)</i></div>  
+             <div class="book-01"><img src="img/matrioszki_02.jpg" title="Matrioszki"><b>Matrioszki<br/>Матрешки, ~12 cm</b><i>25 PLN<br/>(1 szt./ 1 шт.)</i></div>  
+             <div class="book-01"><img src="img/choinka_02.jpg"><b>Ozdoba #2<br/>Украшение #2</b><i>25 PLN</i></div>
+              <div class="book-01"><img src="img/choinka_05.jpg"><b>Ozdoba #5<br/>Украшение #5</b><i>25 PLN</i></div>            
+              <div class="book-01"><img src="img/choinka_04.jpg"><b>Ozdoba #4<br/>Украшение #4</b><i>25 PLN</i></div>  
+            <div class="book-01"><img src="img/choinka_014.jpg"><b>Ozdoba #14<br/>Украшение #14</b><i>25 PLN</i></div>         
+            <div class="book-01"><img src="img/choinka_08.jpg"><b>Ozdoba #8<br/>Украшение #8</b><i>25 PLN</i></div>
+             <div class="book-01"><img src="img/choinka_012.jpg"><b>Ozdoba #12<br/>Украшение #12</b><i>25 PLN</i></div>
+             <div class="book-01 book-02"><img src="img/ozdobe_2053_l.jpg"><b>Ozdobe #2053<br/>Украшение #2053</b> <i>25 PLN (1 szt.)</i><br/><i>50 PLN (4 szt.)</i></div> 
+             <div class="book-01 book-02"><img src="img/balwan_2055_l.jpg"><b>Balwane #2055<br/>Снеговички #2055</b> <i>25 PLN (1 szt.)</i><br/><i>40 PLN (2 szt.)</i></div>
              <!--div class="book-01 book-02"><img src="img/choinka_new_01.jpg"><b>Choinka #1 H=~50 cm <br/>Елочка #1</b><i>2500 Rub / 122 PLN</i></div--> 
-            <div class="book-01 book-02"><img src="img/ania_01_l.jpg"><b>Stroik #5 D=~50cm<br/>Рождественский венок #5</b> <i>3000 Rub / 147 PLN</i></div>
-              <div class="book-01 book-02"><img src="img/stroik_2066_l.jpg"><b>Stroik #2066 D=~50cm<br/>Рождественский венок #2066</b><i>2000 Rub / 98 PLN</i></div>
-              <div class="book-01 book-02"><img src="img/ania_05_l.jpg"><b>Stroik #7 D=~50cm<br/>Рождественский венок #7</b><i>3500 Rub / 170 PLN</i></div>
-             <div class="book-01 book-02"><img src="img/stroik_2062_l.jpg"><b>Stroik #2062 50x30cm<br/>Рождественское украшение #2062</b><i>3000 Rub / 147 PLN</i></div>            
+            <div class="book-01 book-02"><img src="img/ania_01_l.jpg"><b>Stroik #5 D=~50cm<br/>Рождественский венок #5</b> <i>147 PLN</i></div>
+              <div class="book-01 book-02"><img src="img/stroik_2066_l.jpg"><b>Stroik #2066 D=~50cm<br/>Рождественский венок #2066</b><i>98 PLN</i></div>
+              <div class="book-01 book-02"><img src="img/ania_05_l.jpg"><b>Stroik #7 D=~50cm<br/>Рождественский венок #7</b><i>170 PLN</i></div>
+             <div class="book-01 book-02"><img src="img/stroik_2062_l.jpg"><b>Stroik #2062 50x30cm<br/>Рождественское украшение #2062</b><i>147 PLN</i></div>            
              <div class="br"></div>  
-             <div class="book-01"><img src="img/ozdobe_2057.jpg"><b>Zestaw<br/>ozdob choinkowych<br/>Набор украшений</b> <i>500 Rub / 25 PLN</i></div>
-             <div class="book-01"><img src="img/ozdoba_2058.jpg"><b>Ozdoba #2058<br/>Украшение #2058</b> <i>500 Rub / 25 PLN</i></div>
-             <div class="book-01"><img src="img/ozdoba_2059.jpg"><b>Ozdoba #2059<br/>Украшение #2059</b> <i>500 Rub / 25 PLN</i></div>
-             <div class="book-01"><img src="img/pilka_2065.jpg"><b>Ozdoba #2065<br/>Украшение #2065</b> <i>500 Rub / 25 PLN</i></div>            
+             <div class="book-01"><img src="img/ozdobe_2057.jpg"><b>Zestaw<br/>ozdob choinkowych<br/>Набор украшений</b> <i>25 PLN</i></div>
+             <div class="book-01"><img src="img/ozdoba_2058.jpg"><b>Ozdoba #2058<br/>Украшение #2058</b> <i>25 PLN</i></div>
+             <div class="book-01"><img src="img/ozdoba_2059.jpg"><b>Ozdoba #2059<br/>Украшение #2059</b> <i>25 PLN</i></div>
+             <div class="book-01"><img src="img/pilka_2065.jpg"><b>Ozdoba #2065<br/>Украшение #2065</b> <i>25 PLN</i></div>            
              <div class="br"></div>             
    </div>
         <!--/Ozdoby choinkowe-->      
      <!-- handmade-->
       <h2>Handmade</h2>
         <div class="goods" id="handmade"> 
-        <div class="book-01"><img src="img/jr_01.jpg"><b>Jednorożec #1<br/>Единорог #1</b> <i>Broszka / Брошка, ~3 cm<br/>500 Rub / 25 PLN</i></div>
+        <div class="book-01"><img src="img/jr_01.jpg"><b>Jednorożec #1<br/>Единорог #1</b> <i>Broszka / Брошка, ~3 cm<br/>25 PLN</i></div>
         <!--div class="book-01"><img src="img/jr_02.jpg"><b>Jednorożec #2</b> <i>Broszka, ~3-4 cm</i></div-->
-        <div class="book-01"><img src="img/jednorozec_2061.jpg"><b>Jednorożec #3<br/>Единорог #3</b> <i>Broszka / Брошка, ~3 cm <br/>500 Rub / 25 PLN</i></div>     
-       <div class="book-01"><img src="img/podkladki_01.jpg"><b>Podkładki, zestaw 4 szt. / подставки под горячее, 4 шт.</b> <i>500 Rub / 35 PLN</i></div>
-         <!--div class="book-01 book-02"><img src="img/korale_l.jpg"><b>Korale z tkaniny, ~25-30 cm<br/>Бусы из ткани</b> <i>500 Rub / 25 PLN</i></div-->   
+        <div class="book-01"><img src="img/jednorozec_2061.jpg"><b>Jednorożec #3<br/>Единорог #3</b> <i>Broszka / Брошка, ~3 cm <br/>25 PLN</i></div>     
+       <div class="book-01"><img src="img/podkladki_01.jpg"><b>Podkładki, zestaw 4 szt. / подставки под горячее, 4 шт.</b> <i>35 PLN</i></div>
+         <!--div class="book-01 book-02"><img src="img/korale_l.jpg"><b>Korale z tkaniny, ~25-30 cm<br/>Бусы из ткани</b> <i>25 PLN</i></div-->   
         <div class="br"></div>             
    </div>
         <!--/handmade-->
