--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ Serdecznie zapraszamy do zakupów online, opłata za pośrednictwem <b>eSkarbonk
           </a-->
       </div> 
             <!--div class="rezerw"></div-->
-      <h1>Ceny Rub. / PLN | Цены руб. / злотые</h1>
+      <h1>Ceny PLN | Цены злотые</h1>
       <!-- Ozdoby choinkowe-->
         <h2>Ozdoby choinkowe / Елочные игрушки</h2>
          <div class="goods" id="ozdoby_choinkowe">  
